# data-imports

./: .env.example  .gitignore  DEPLOYMENT-EXAMPLE.sh  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  STRUCTURE.md  docker-compose.yml  docker-entrypoint.sh  meltano.yml  requirements.txt  run-all-jobs.sh  run-etl.sh  setup.sh  test_setup.py
.github/workflows/: deploy.yml
plugins/tap-elexon/: README.md  pyproject.toml
plugins/tap-elexon-b1610/: README.md  pyproject.toml
plugins/tap-elexon-b1610/tap_elexon_b1610/: __init__.py  streams.py  tap.py
plugins/tap-elexon-bm/: MANIFEST.in  README.md  pyproject.toml
plugins/tap-elexon-bm/tap_elexon_bm/: __init__.py  streams.py  tap.py
plugins/tap-elexon-disebsp/: MANIFEST.in  README.md  pyproject.toml
plugins/tap-elexon-disebsp/tap_elexon_disebsp/: __init__.py  tap.py
plugins/tap-elexon-midp/: MANIFEST.in  README.md  pyproject.toml
plugins/tap-elexon-midp/tap_elexon_midp/: __init__.py  streams.py  tap.py
plugins/tap-elexon/tap_elexon/: __init__.py  streams.py  tap.py
plugins/tap-nationalgas/: MANIFEST.in  README.md  pyproject.toml
plugins/tap-nationalgas/tap_nationalgas/: __init__.py  streams.py  tap.py
plugins/target-influxdb/: MANIFEST.in  README.md  pyproject.toml
plugins/target-influxdb/target_influxdb/: __init__.py  sinks.py  target.py
