[build-system]
requires = ["poetry-core>=1.0.8", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "tap-elexon"
version = "0.1.0"
description = "Singer tap for Elexon BMRS API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
keywords = ["ELT", "Elexon", "BMRS", "Singer", "Meltano"]

[tool.poetry.dependencies]
python = ">=3.8"
singer-sdk = "^0.39.1"
requests = "^2.32.3"

[tool.poetry.scripts]
tap-elexon = "tap_elexon.tap:TapElexon.cli"
