[build-system]
requires = ["poetry-core>=1.0.8", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "target-influxdb"
version = "0.1.0"
description = "Singer target for InfluxDB 2.x"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
keywords = ["ELT", "InfluxDB", "Singer", "Meltano"]

[tool.poetry.dependencies]
python = ">=3.8"
singer-sdk = "^0.39.1"
influxdb-client = "^1.44.0"

[tool.poetry.scripts]
target-influxdb = "target_influxdb.target:TargetInfluxDB.cli"
